--- a/ks-ci-bot/config.yaml
+++ b/ks-ci-bot/config.yaml
@@ -1,19 +1,19 @@
-postsubmits:
-  kubesphere/s2ioperator:
-  - name: test-postsubmit
-    spec:
-      containers:
-      - image: alpine
-        command: ["/bin/printenv"]
-presubmits:
-  kubesphere/s2ioperator:
-  - name: test-presubmit
-    always_run: true
-    skip_report: false
-    spec:
-      containers:
-      - image: alpine
-        command: ["/bin/printenv"]
+# postsubmits:
+#   kubesphere/s2ioperator:
+#   - name: test-postsubmit
+#     spec:
+#       containers:
+#       - image: alpine
+#         command: ["/bin/printenv"]
+# presubmits:
+#   kubesphere/s2ioperator:
+#   - name: test-presubmit
+#     always_run: true
+#     skip_report: false
+#     spec:
+#       containers:
+#       - image: alpine
+#         command: ["/bin/printenv"]
 prowjob_namespace: "prow"
 tide:
   merge_method:
